# prepath

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml
Example/: CMakeLists.txt
Example/src/: cache.h  main.cpp
Prepath/: CMakeLists.txt
Prepath/src/Prepath/: AABB.h  Camera.h  Context.cpp  Context.h  Cubemap.cpp  Cubemap.h  Error.cpp  Error.h  Lib.h  Light.cpp  Light.h  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
runtime/: NewSponza_IvyGrowth_glTF.gltf  imgui.ini  renderdoc.cap  san-miguel.gltf  sponza.blend  sponza.gltf  sponza.mtl
runtime/models/: NewSponza_CypressTree_glTF.gltf  StandfordDragon.mtl  gallery.mtl
runtime/models/textures/: Cypress_LF01_Spring_BaseColor.tga
runtime/shader/: bounds.vert  default.frag  default.vert  depth.vert  gizmo.frag  gizmo.vert  pointlight.frag  pointlight.geom  pointlight.vert  skybox.frag  skybox.vert
